# arm_driver

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json
dependencies/kernel/: .config  Makefile  System.map
dependencies/kernel/arch/arm64/boot/dts/hobot/: .hobot-j6e-brandy.dtb.d.dtc.tmp  .hobot-j6e-brandy.dtb.d.pre.tmp  .hobot-j6e-brandy.dtb.dts.tmp  .hobot-j6e-evm.dtb.d.dtc.tmp  .hobot-j6e-evm.dtb.d.pre.tmp  .hobot-j6e-evm.dtb.dts.tmp  .hobot-j6e-hdc-1-11-a.dtb.d.dtc.tmp  .hobot-j6e-hdc-1-11-a.dtb.d.pre.tmp  .hobot-j6e-hdc-1-11-a.dtb.dts.tmp  .hobot-j6e-hdc-1-11-b.dtb.d.dtc.tmp  .hobot-j6e-hdc-1-11-b.dtb.d.pre.tmp  .hobot-j6e-hdc-1-11-b.dtb.dts.tmp  .hobot-j6e-hdc-a-v27.dtb.d.dtc.tmp  .hobot-j6e-hdc-a-v27.dtb.d.pre.tmp  .hobot-j6e-hdc-a-v27.dtb.dts.tmp  .hobot-j6e-hdc-a.dtb.d.dtc.tmp  .hobot-j6e-hdc-a.dtb.d.pre.tmp  .hobot-j6e-hdc-a.dtb.dts.tmp  .hobot-j6e-hdc-b.dtb.d.dtc.tmp  .hobot-j6e-hdc-b.dtb.d.pre.tmp  .hobot-j6e-hdc-b.dtb.dts.tmp  .hobot-j6e-hdc344-1-00-a.dtb.d.dtc.tmp  .hobot-j6e-hdc344-1-00-a.dtb.d.pre.tmp  .hobot-j6e-hdc344-1-00-a.dtb.dts.tmp  .hobot-j6e-hdc344-1-00-b.dtb.d.dtc.tmp  .hobot-j6e-hdc344-1-00-b.dtb.d.pre.tmp  .hobot-j6e-hdc344-1-00-b.dtb.dts.tmp  .hobot-j6e-matrix-sipA.dtb.d.dtc.tmp  .hobot-j6e-matrix-sipA.dtb.d.pre.tmp  .hobot-j6e-matrix-sipA.dtb.dts.tmp  .hobot-j6e-matrix-sipB.dtb.d.dtc.tmp  .hobot-j6e-matrix-sipB.dtb.d.pre.tmp  .hobot-j6e-matrix-sipB.dtb.dts.tmp  .hobot-j6e-matrixA.dtb.d.dtc.tmp  .hobot-j6e-matrixA.dtb.d.pre.tmp  .hobot-j6e-matrixA.dtb.dts.tmp  .hobot-j6e-matrixB.dtb.d.dtc.tmp  .hobot-j6e-matrixB.dtb.d.pre.tmp  .hobot-j6e-matrixB.dtb.dts.tmp  .hobot-j6e-soc-kdump.dtb.d.dtc.tmp  (+36 more)
dependencies/kernel/arch/arm64/kernel/: asm-offsets.s  vmlinux.lds
dependencies/kernel/arch/arm64/kernel/vdso/: vdso.lds  vdso.so.dbg
dependencies/kernel/arch/arm64/kvm/: hyp-constants.s
dependencies/kernel/arch/arm64/kvm/hyp/nvhe/: gen-hyprel  hyp-reloc.S  hyp.lds
dependencies/kernel/include/config/: auto.conf  auto.conf.cmd  kernel.release
dependencies/kernel/scripts/: asn1_compiler  kallsyms  sorttable
dependencies/kernel/scripts/basic/: fixdep
dependencies/kernel/scripts/dtc/: dtc  fdtoverlay
dependencies/kernel/scripts/kconfig/: conf
dependencies/kernel/scripts/mod/: devicetable-offsets.s  mk_elfconfig  modpost
dependencies/toolchain/aarch64-none-linux-gnu/include/c++/12.2.1/aarch64-none-linux-gnu/bits/: c++config.h
dependencies/toolchain/aarch64-none-linux-gnu/lib64/: libgcc_s.so.1  libgomp.so.1.0.0  libstdc++.so.6.0.30-gdb.py
dependencies/toolchain/aarch64-none-linux-gnu/libc/lib/: ld-linux-aarch64.so.1
dependencies/toolchain/aarch64-none-linux-gnu/libc/lib64/: libBrokenLocale.so.1  libanl.so.1  libc_malloc_debug.so.0  libcrypt.so.1  libdl.so.2  libm.so.6  libnsl.so.1  libnss_compat.so.2  libnss_db.so.2  libnss_dns.so.2  libnss_files.so.2  libnss_hesiod.so.2  libpthread.so.0  libresolv.so.2  librt.so.1  libthread_db.so.1  libutil.so.1
dependencies/toolchain/aarch64-none-linux-gnu/libc/sbin/: sln
dependencies/toolchain/aarch64-none-linux-gnu/libc/usr/lib64/: libatomic.so.1.2.0  libhwasan.so.0.0.0  libitm.so.1.0.0  liblsan.so.0.0.0  libubsan.so.1.0.0
dependencies/toolchain/aarch64-none-linux-gnu/libc/usr/libexec/getconf/: XBS5_LP64_OFF64
dependencies/toolchain/aarch64-none-linux-gnu/libc/usr/sbin/: iconvconfig  nscd  zic
dependencies/toolchain/aarch64-none-linux-gnu/libc/usr/share/info/: libc.info  libc.info-1  libc.info-10  libc.info-11  libc.info-12  libc.info-13  libc.info-14  libc.info-15  libc.info-16  libc.info-17  libc.info-18  libc.info-2  libc.info-3  libc.info-4  libc.info-5  libc.info-6  libc.info-7  libc.info-8  libc.info-9
dependencies/toolchain/lib/gcc/aarch64-none-linux-gnu/12.2.1/include-fixed/: pthread.h
dependencies/toolchain/lib/gcc/aarch64-none-linux-gnu/12.2.1/plugin/: gtype.state
dependencies/toolchain/lib/gcc/aarch64-none-linux-gnu/12.2.1/plugin/include/: auto-host.h  configargs.h  plugin-version.h  version.h
dependencies/toolchain/libexec/gcc/aarch64-none-linux-gnu/12.2.1/: collect2  g++-mapper-server  lto-wrapper
dependencies/toolchain/libexec/gcc/aarch64-none-linux-gnu/12.2.1/install-tools/: mkheaders
dependencies/toolchain/libexec/gcc/aarch64-none-linux-gnu/12.2.1/plugin/: gengtype
examples/: CMakeLists.txt
examples/block_driver/: CMakeLists.txt  FLASH_READ_GUIDE.md  read_flash.c
examples/char_driver/: CMakeLists.txt  test_chardev.c
examples/net_block_server/: CMakeLists.txt  netblk_server.c
examples/simple_driver/: CMakeLists.txt  test_app.c
include/: arm_driver.h  block_driver.h
src/: CMakeLists.txt  Makefile
src/block_driver/: CMakeLists.txt  Makefile  README.md  block_driver.c
src/char_driver/: CHAR_DEVICE_USAGE.md  CMakeLists.txt  Makefile  README.md  char_driver.c  字符设备vs块设备详解.md
src/net_block_driver/: CMakeLists.txt  Makefile  README.md  net_block_driver.c
src/simple_driver/: CMakeLists.txt  Makefile  README.md  simple_driver.c
